Lootbox messages now specify who got shares, and who got none (#2464)